Move to bootstrap and use a cover page

--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ canonifyurls = true
     tag = "tags"
 
 [params]
-    Description = "Evolve solutions; when you find a good one, don't stop."
+    Description = "When I'm not juggling code, I go out and photograph some of the amazing places and beaches in Sydney. Dreamer. Builder. Learner."
     twitter = "jmalonzo"
     github = "jmalonzo"
     gplus = "+JanMichaelAlonzo"
