Add OGP and Twitter:card support

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 baseurl = "http://www.janalonzo.com"
 languageCode = "en-us"
 title = "Jan Alonzo"
+desription = "My personal blog, notes, and some photography here and there"
 canonifyurls = true
 
 [indexes]
