--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-compress": "^0.12.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "0",
+    "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-imageoptim": "^1.4.1",
     "grunt-shell": "^1.1.1",
     "load-grunt-tasks": "^1.0.0"
