Redesign photography lists and single pages

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "http://www.janalonzo.com"
 languageCode = "en-us"
-title = "Jan Alonzo"
+title = "Jan Michael Alonzo"
 desription = "My personal blog, notes, and some photography here and there"
 canonifyurls = true
 
