--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "devDependencies": {
     "bower": "1.3",
     "grunt": "~0.4.2",
+    "grunt-aws": "^0.4.0",
     "grunt-contrib-clean": "0",
-    "grunt-contrib-compress": "^0.12.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "0",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-uglify": "^0.6.0",
+    "grunt-critical": "0.0.3",
     "grunt-imageoptim": "^1.4.1",
     "grunt-newer": "^0.8.0",
     "grunt-react": "^0.10.0",
