--- a/package.json
+++ b/package.json
@@ -11,14 +11,10 @@
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-critical": "0.0.3",
-    "grunt-imageoptim": "^1.4.1",
     "grunt-newer": "^0.8.0",
     "grunt-react": "^0.10.0",
+    "grunt-responsive-images": "^0.1.4",
     "grunt-shell": "^1.1.1",
     "load-grunt-tasks": "^1.0.0"
-  },
-  "dependencies": {
-    "grunt-contrib-imagemin": "^0.9.1",
-    "grunt-responsive-images": "^0.1.4"
   }
 }
