--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-react": "^0.10.0",
     "grunt-responsive-images": "^0.1.4",
     "grunt-shell": "^1.1.1",
+    "grunt-webp": "0.0.4",
     "load-grunt-tasks": "^1.0.0"
   }
 }
