Enable Content Security Policy; Split CSS into multiple resources

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://www.janalonzo.com"
+baseurl = "https://www.janalonzo.com"
 languageCode = "en-us"
 title = "Jan Michael Alonzo"
 desription = "My personal blog, notes, and some photography here and there"
