--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 baseurl = "https://www.janalonzo.com"
+#baseurl = "http://localhost:1313"
 languageCode = "en-us"
 title = "Jan Michael Alonzo"
 desription = "My personal blog, notes, and some photography here and there"
