--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "janalonzo.com",
   "version": "1.1.0",
+  "private": true,
   "devDependencies": {
     "bower": "1.3",
     "grunt": "~0.4.2",
@@ -10,6 +11,7 @@
     "grunt-contrib-cssmin": "0",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-critical": "0.0.3",
     "grunt-newer": "^0.8.0",
     "grunt-react": "^0.10.0",
