--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "bower": "1.3",
     "grunt": "~0.4.2",
     "grunt-aws": "^0.4.0",
-    "grunt-bpg": "^0.2.0"
+    "grunt-bpg": "^0.2.0",
     "grunt-contrib-clean": "0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "0",
