Remove photos, custom theme/layout, and complex build process.

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,4 @@
 baseurl = "https://www.janalonzo.com"
-#baseurl = "http://localhost:1313"
 languageCode = "en-us"
 canonifyurls = true
 title = "/public/"
@@ -8,6 +7,7 @@ title = "/public/"
     category = "categories"
     tag = "tags"
 
-[params]
+[Params]
+    Author = "Jan Alonzo"
     Tagline = ""
-
+    Description = "RANDOM INCONSEQUENTIAL MUSINGS"
