Add cloudfront invalidation after sync

--- a/circle.yml
+++ b/circle.yml
@@ -19,3 +19,4 @@ deployment:
     branch: master
     commands:
       - aws s3 sync public s3://janalonzo.com/ --delete
+      - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths /index.html /index.xml
