--- a/config.dev.toml
+++ b/config.dev.toml
@@ -1,13 +1,17 @@
 baseurl = "http://localhost:1313"
 languageCode = "en-us"
 canonifyurls = true
-title = "/public/"
+title = "/public"
+author = "jmalonzo"
+copyright = "2017 Jan Alonzo. All Rights Reserved."
 
 [indexes]
     category = "categories"
     tag = "tags"
 
-[Params]
-    Author = "Jan Alonzo"
-    Tagline = ""
-    Description = "RANDOM INCONSEQUENTIAL MUSINGS"
+[params]
+  logo      = "https://avatars2.githubusercontent.com/u/12141?v=3&u=832a05acdf956d9a9f0449908c9db64638ad7448&s=400"
+  twitter   = "https://twitter.com/jmalonzo"
+  facebook  = "https://www.facebook.com/jmalonzo"
+  github    = "https://github.com/jmalonzo"
+  email     = "jmalonzo@gmail.com"
