Remove --delete sync option

--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,6 @@ deployment:
   prod:
     branch: master
     commands:
-      - aws s3 sync public s3://janalonzo.com/ --delete
+      - aws s3 sync public s3://janalonzo.com/
       - aws configure set preview.cloudfront true
       - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths /index.html /index.xml
