--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,9 @@ googleAnalytics = ""
   description = ""
   copyright = "&copy; 2017 Jan Alonzo"
 
+  pageNotFoundTitle = "Where could it be?"
+  pageNotFoundSubtitle = "I wish that page exists, sorry. <br> Page not found."
+
 [params.offcanvas]
     # Menu items
     title = "Jan Alonzo"
