--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean": "rm -rf public static build tmp",
     "html-minifier": "html-minifier --remove-comments --collapse-whitespace --input-dir public",
     "copy-assets": "cp assets/* public/",
-    "build": "npm run clean && hugo --uglyURLs='true' --theme sublime-hugo-theme --verbose && npm run copy-assets",
-    "start": "hugo server --config config.dev.toml --buildDrafts --theme sublime-hugo-theme --verbose"
+    "build": "npm run clean && hugo --uglyURLs='true' --theme internet-weblog --verbose && npm run copy-assets",
+    "start": "hugo server --config config.dev.toml --buildDrafts --theme internet-weblog --verbose"
   }
 }
