--- a/config.dev.toml
+++ b/config.dev.toml
@@ -2,6 +2,8 @@ baseurl = "http://localhost:1313"
 languagecode = "en-US"
 canonifyurls = true
 title = "b-log"
+uglyURLs = true
+theme = "internet-weblog"
 
 pygmentsstyle = "emacs"
 Paginate = 5
