--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,8 @@ languagecode = "en-US"
 canonifyurls = true
 title = "b-log"
 googleAnalytics = "UA-594998-17"
+uglyURLs = true
+theme = "internet-weblog"
 
 pygmentsstyle = "emacs"
 Paginate = 5
