Maybe awscli is already installed?

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - run: git submodule update --init
       - run: wget https://github.com/gohugoio/hugo/releases/download/v0.37.1/hugo_0.37.1_Linux-64bit.deb
       - run: sudo dpkg -i hugo*.deb
-      - run: pip install awscli --upgrade --user
+#      - run: pip install awscli --upgrade --user
       - run:
           name: install dependencies
           command: yarn
