--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,10 @@ jobs:
       enabled: true
     steps:
       - run:
-          command: |
-            aws s3 sync public s3://janalonzo.com/ --delete
-            aws configure set preview.cloudfront true
-            aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths /index.html /index.xml
+          name: Sync to S3
+          command: aws s3 sync public s3://janalonzo.com/ --delete
+      - run: aws configure set preview.cloudfront true
+      - run: aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths /index.html /index.xml
 workflows:
   version: 2
   build-deploy:
