--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 # .circleci/config.yml
 defaults: &defaults
   docker:
-    - image: felicianotech/docker-hugo:0.27.1
+    - image: circleci/node:9
   working_directory: ~/project
 version: 2
 jobs:
@@ -11,6 +11,8 @@ jobs:
       - checkout
       - run: git submodule sync
       - run: git submodule update --init
+      - run: wget https://github.com/gohugoio/hugo/releases/download/v0.37.1/hugo_0.37.1_Linux-64bit.deb
+      - run: sudo dpkg -i hugo*.deb
       - run: yarn
       - run:
           name: "Build Our Statically Generated Docs Website with Hugo"
