--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,3 +30,15 @@ jobs:
           command: aws s3 sync public s3://janalonzo.com/ --delete
       - run: aws configure set preview.cloudfront true
       - run: aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths /index.html /index.xml
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
+
