--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,14 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/project
-      - run: sudo apt-get -y -qq install awscli
+      - run:
+          name: Install awscli
+          command: |
+            apt-get -y -qq update
+            apt-get -y -qq install python3.4-dev
+            curl -O https://bootstrap.pypa.io/get-pip.py
+            python3.4 get-pip.py --user
+            pip install awscli --upgrade --user
       - run:
           name: Sync to S3
           command: aws s3 sync public s3://janalonzo.com/ --delete
