--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,12 +26,17 @@ jobs:
       - attach_workspace:
           at: ~/project
       - run:
+          name: Make Composer executables available globally
+          command: |
+      - run:
           name: Install awscli
           command: |
             sudo apt-get -y -qq update
             sudo apt-get -y -qq install python3.4-dev
             curl -O https://bootstrap.pypa.io/get-pip.py
             python3.4 get-pip.py --user
+            echo 'export PATH=$HOME/.local/bin:$PATH' >> $BASH_ENV
+            source /home/circleci/.bashrc
             pip install awscli --upgrade --user
       - run:
           name: Sync to S3
