--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,9 @@ jobs:
           name: Install awscli
           command: |
             sudo apt-get -y -qq update
-            sudo apt-get -y -qq install python3.6-dev
+            sudo apt-get -y -qq install python-dev
             curl -O https://bootstrap.pypa.io/get-pip.py
-            python3.6 get-pip.py --user
+            python get-pip.py --user
             export PATH=$HOME/.local/bin:$PATH
             pip install awscli --upgrade --user
             aws s3 sync dist s3://janalonzo.com/ --delete
