--- a/package.json
+++ b/package.json
@@ -2,18 +2,11 @@
   "name": "janalonzo.com",
   "version": "3.4.0",
   "private": true,
-  "dependencies": {
-    "vuepress-theme-yuu": "^2.3.0"
-  },
-  "devDependencies": {
-    "@vuepress/plugin-pwa": "^1.5.0",
-    "vuepress": "^1.5.0"
-  },
   "scripts": {
-    "clean": "rm -rf public static build tmp dist",
+    "clean": "rm -rf _site",
     "html-minifier": "html-minifier --remove-comments --collapse-whitespace --input-dir public",
     "copy-assets": "cp assets/* public/",
-    "build": "npm run clean && vuepress build content",
-    "start": "vuepress dev content"
+    "build": "npm run clean && npx @11ty/eleventy && cp _assets/* _site/",
+    "start": "npx @11ty/eleventy --serve"
   }
 }
